Issue CXDEVII-1727: Keeping arrow after Uitloggen on the same line on small screen size.

--- a/aegon-sass-library/structures/_user_detail.scss
+++ b/aegon-sass-library/structures/_user_detail.scss
@@ -16,6 +16,7 @@
       position: relative;
       top: 0px;
       right: 0px;
+      white-space: nowrap;
     }
   }
 
